# streamd

./: .clang-format  CMakeLists.txt  README.md  build.sh
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.devcontainer/artifacts/: settings.json
.devcontainer/artifacts/runtime/: .env
.devcontainer/artifacts/runtime/conf/: xdg-desktop-portal-wlr.conf
.github/: settings.yml
wayland/: CMakeLists.txt
wayland/src/: CMakeLists.txt  config.h.in  log.c  log.h  main.c  misc.h  utils.c  utils.h
wayland/src/libobs/util/: base.c  base.h  bmem.c  bmem.h  darray.h  dstr.c  dstr.h  threading-posix.h
wayland/src/navi/: keyboard.c  navi.c  navi.h  neatvnc.h  pointer.c  pointer.h  wlr-virtual-pointer-unstable-v1-client-protocol.h
wayland/src/portal/: portal.c  portal.h  screencast-portal.c  screencast-portal.h
x11/src/: CMakeLists.txt  log.c  log.h  main.c  navi.c  navi.h  utils.h
